--- a/RPShoping/Web.config
+++ b/RPShoping/Web.config
@@ -12,7 +12,7 @@
   </configSections>
   <!--数据库连接字符串-->
   <connectionStrings>
-    <add name="AFaneTiConectStr" connectionString="Data Source=.;Initial Catalog=RPShoping;User ID=sa;Password=sql2008;MultipleActiveResultSets=true;Pooling=true; MAX Pool Size=512;Min Pool Size=5;Connection Lifetime=30;" providerName="System.Data.SqlClient" />
+    <add name="AFaneTiConectStr" connectionString="Data Source=47.104.129.130;Initial Catalog=RPShoping;User ID=sa;Password=Sql2014;MultipleActiveResultSets=true;Pooling=true; MAX Pool Size=512;Min Pool Size=5;Connection Lifetime=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <unity configSource="config\unity.config" />
   <nlog configSource="config\nlog.config" />
